# Raytracing

./: .gitignore  Cargo.toml  Readme.md  doc_head.html  justfile  shell.nix
cli/: Cargo.toml
cli/src/: cli.rs  main.rs  progress.rs  renderer.rs  tev.rs  tile_renderer.rs
cli/src/output/: file_output.rs  mod.rs  sdl2_streaming.rs  tev_output.rs  tev_streaming.rs
crates/rt/: Cargo.toml
crates/rt-cli/: Cargo.toml
crates/rt-cli/src/: cli.rs  executor.rs  main.rs  progress.rs  renderer.rs  storage.rs  tile.rs
crates/rt-cli/src/output/: file_output.rs  mod.rs  sdl2_streaming.rs  tev_streaming.rs
crates/rt-cli/src/utils/: mod.rs
crates/rt/src/: Readme.md  camera.rs  filter.rs  lib.rs  memory.rs  ray.rs  renderer.rs  sampler.rs
crates/rt/src/aggregate/: embree.rs  mod.rs
crates/rt/src/color/: colorspace.rs  mod.rs
crates/rt/src/integrators/: basic.rs  mod.rs  pathtracing.rs  randomwalk.rs  whitted.rs
crates/rt/src/loader/: obj.rs
crates/rt/src/material/: dielectric.rs  diffuse.rs  emit.rs  gooch.rs  metal.rs  mix.rs  mod.rs  phong.rs
crates/rt/src/math/: distributions.rs  float.rs  point.rs  stat.rs  transform.rs  vec.rs
crates/rt/src/scene/: mod.rs
crates/rt/src/scene/examples/: cornell.rs  debug.rs  dragon.rs  mod.rs  spheres.rs  standford_bunny.rs
crates/rt/src/shape/: mod.rs  sphere.rs
crates/rt/src/utils/: counter.rs  mod.rs  timer.rs
doc/: .gitignore  commands.tex  global_illumination.tex  physics.tex  references.bib  rendering.tex  whitted.tex
output/: gen.sh
raytracing/: Cargo.toml
raytracing/src/: camera.rs  color.rs  hit.rs  lib.rs  progress.rs  ray.rs  renderer.rs  scene.rs
raytracing/src/aggregate/: bvh.rs  mod.rs  shapelist.rs
raytracing/src/color/: mod.rs
raytracing/src/hit/: mod.rs
raytracing/src/integrators/: basic.rs  mod.rs  whitted.rs
raytracing/src/loader/: mod.rs  obj.rs
raytracing/src/material/: dielectric.rs  diffuse.rs  emit.rs  gooch.rs  material.rs  metal.rs  mix.rs  mod.rs  phong.rs
raytracing/src/math/: bounds.rs  distributions.rs  float.rs  mod.rs  quaternion.rs  stat.rs  transform.rs  vec.rs
raytracing/src/scene/: mod.rs
simple-runner/: Cargo.toml
simple-runner/src/: main.rs
src/: camera.rs  color.rs  lib.rs  main.rs  progress.rs  ray.rs  renderer.rs  scene.rs
src/hit/: mod.rs
src/material/: mod.rs
src/math/: mod.rs  quaternion.rs  utils.rs  vec.rs
tev-client/: Cargo.toml
tev-client/src/: main.rs  tev_renderer.rs
viewer/: Cargo.toml
viewer/src/: gui_renderer.rs  main.rs  raytracing_pipeline.rs  vulkan_renderer.rs
(+23 files in other folders)
