[package]
name = "viewer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
bytemuck = "1.12.1"
env_logger = "0.9.1"
image = "0.24.4"
itertools = "0.10.5"
log = "0.4.17"
rand = "0.8.5"
rayon = "1.5.3"
raytracing = { path = "../raytracing" }
vulkano = { git = "https://github.com/vulkano-rs/vulkano" }
vulkano-shaders = { git = "https://github.com/vulkano-rs/vulkano" }
vulkano-win = { git = "https://github.com/vulkano-rs/vulkano" }
winit = "0.27.4"

[features]
default = [ "validationlayers" ]
validationlayers = []
