[package]
name = "rt-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
bytemuck = "1.12.1"
clap = { version = "4.0.18", features = ["derive"] }
embree4-rs = "0.0.16"
env_logger = "0.9.1"
image = "0.24.4"
itertools = "0.10.5"
log = "0.4.17"
rand = "0.8.5"
rayon = "1.5.3"
rt = { path = "../rt" }
sdl2 = { version = "0.35.2", features = ["bundled"] }
tev_client = "0.5.2"
