[package]
name = "rt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
bytemuck = { version = "1.12.1", features = ["derive"] }
embree4-rs.workspace = true
embree4-sys.workspace = true
env_logger = "0.9.1"
glam = "0.21.3"
image = "0.24.4"
lazy_static = "1.4.0"
log = "0.4.17"
rand = "0.8.5"
rayon = "1.5.3"
tobj = "3.2.3"

[features]
default = ["debug_light"]
# default = ["debug"]
debug = ["counter", "counter_time"]
debug_light = ["counter"]
counter_time = []
counter = []
